brat/test/golden/error/vec_length.brat
f(X :: *, n :: #, Vec(X, 1 + n)) -> Vec(X, n)
f(_, _, xs) = xs
